tests/error/poly_errors/arg_mismatch9.err
Error: Type mismatch (at $FILE:18:23)
   | 
16 | @guppy(module)
17 | def main(x: int, y: float) -> None:
18 |     foo[float, int](x, y)
   |                        ^ Expected argument of type `int`, got `float`

Guppy compilation failed due to 1 previous error
